# multilightning

./: .gitignore  .readthedocs.yml  LICENSE  README.md  environment.yml  extra_requirements.txt  pyproject.toml  requirements.txt
docs/: build_docs.sh  requirements.txt
docs/source/: MultiLightning.rst  Priors.rst  conf.py  index.rst  recipe.rst
docs/source/examples/: NGC628.ipynb
examples/: NGC0628-photometry.fits  NGC0628_config.json  NGC0628_res.h5  test_NGC0628.py  test_postproc_NGC0628.py
examples/.ipynb_checkpoints/: NGC628-checkpoint.ipynb
src/multi_lightning/: __init__.py  multi_lightning.py  priors.py
